Upgrade from Java 8 to Java 17
- Update Ant build.xml: change all javac source/target from 1.8 to 17
- Add --add-opens JVM args for test runners to allow sun.misc.Unsafe
  and reflective access under Java 17's module system
- Update all GitHub Actions workflows: JDK 1.8 -> 17, setup-java v1 -> v4,
  checkout v2 -> v4, add Temurin distribution
- Update sample project pom.xml files: compiler plugin 3.5.1 -> 3.13.0,
  source/target 1.8 -> 17, H2 database 1.4.192 -> 2.2.224
- Update sample build.gradle: sourceCompatibility/targetCompatibility 1.8 -> 17
- Replace deprecated Class.newInstance() with
  getDeclaredConstructor().newInstance() across all modules
- Add @SuppressWarnings("deprecation") for finalize() overrides and
  AccessController.doPrivileged() usage
- Update BUILD.md, setenv.sh, setenv.bat for JDK 17 references
- Normalize line endings (CRLF -> LF) in modified files

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>