@@ -321,7 +321,7 @@ public abstract class MithraAbstractDatabaseObject
         {
             try
             {
-                return (MithraStatsListenerFactory) Class.forName(factoryClassName).newInstance();
+                return (MithraStatsListenerFactory) Class.forName(factoryClassName).getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
@@ -2430,7 +2430,7 @@ public abstract class MithraAbstractDatabaseObject
     {
         try
         {
-            return bean.newInstance();
+            return bean.getDeclaredConstructor().newInstance();
         }
         catch (InstantiationException e)
         {
