@@ -63,7 +63,7 @@ public class MithraSerialUtil
         Exception problem = null;
         try
         {
-            return (MithraDataObject) dataClass.newInstance();
+            return (MithraDataObject) dataClass.getDeclaredConstructor().newInstance();
         }
         catch (InstantiationException e)
         {
@@ -90,7 +90,7 @@ public class MithraSerialUtil
         Exception problem = null;
         try
         {
-            return Class.forName(className).newInstance();
+            return Class.forName(className).getDeclaredConstructor().newInstance();
         }
         catch (InstantiationException e)
         {
