@@ -74,7 +74,7 @@ public class H2DbServer
     private void initializeH2() throws Exception
     {
         getLogger().info("Starting H2 database Server");
-        Class.forName("org.h2.Driver").newInstance();
+        Class.forName("org.h2.Driver").getDeclaredConstructor().newInstance();
         getLogger().info("H2 database Server Started");
     }
 
